refactor: extend global state proof with mptRoot: Option[Hash] (#1392)